2007-05-11  Sven Neumann  <sven@gimp.org>

	* app/file/Makefile.am
	* app/file/xdg-user-dir.[ch]: added a slightly modified copy of
	xdg-user-dirs-lockup.c from freedesktop.org.

2007-05-11  Sven Neumann  <sven@gimp.org>

	* app/main.c (gimp_dbus_open): don't attempt the conversion if the
	argument is already an URI.

2007-05-11  Sven Neumann  <sven@gimp.org>

	* app/main.c (gimp_dbus_open): convert filenames to absolute file
	URIs before passing them to dbus_g_proxy_call().

2007-05-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_main.[ch]
	* plug-ins/imagemap/imap_menu.c
	* plug-ins/imagemap/imap_command.c: finished port of Undo and Redo
	menus to GtkAction. Closes bug #138841.

2007-05-10  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py: remove parameter definition special
	casing that was based on menu and plugin types. Instead expect the
	script to specify all its parameters in its register call, and hide
	the UI elements for the parameters we are already passed in
	interactive mode. For compatibilty, this is only turned on when you
	specify the "menu" named argument in the register call, or if you pass
	an empty label. This should fix bug #104639.

	* plug-ins/pygimp/plug-ins/clothify.py
	* plug-ins/pygimp/plug-ins/colorxhtml.py
	* plug-ins/pygimp/plug-ins/foggify.py
	* plug-ins/pygimp/plug-ins/py-slice.py
	* plug-ins/pygimp/plug-ins/shadow_bevel.py
	* plug-ins/pygimp/plug-ins/whirlpinch.py: update to register image and
	drawable parameters explicitly.

2007-05-10  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-image.c: bind gimp_image_resize_to_layers.

2007-05-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/flame/rect.c: reduced the number of progress updates.

2007-05-09  Karine Delvare  <edhel@gimp.org>

	* plug-ins/common/waves.c: use the new preview transform function, 
	see bug #356716.

2007-05-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c (lcms_icc_apply): improved handling of